--- a/index.Rmd
+++ b/index.Rmd
@@ -49,7 +49,7 @@ This supplementary website has been archived on Zenodo.org [![DOI]()]().
 
 
 ### Abstract
-Few studies have examined birth order effects on personality in countries that are not Western, educated, industrialized, rich, and democratic (WEIRD). However, theories have generally suggested interculturally universal family dynamics as the mechanism behind birth order effects, and prominent theories such as resource dilution would even predict stronger effects in poorer countries. Here, we investigate a subset of up to 11,188 participants of the Indonesian Family Life Survey, an ongoing representative panel study, to investigate whether later-born siblings differ from earlier-borns in intelligence, educational attainment, Big Five personality traits, and risk aversion. Analyses were performed using within-family designs in mixed-effects models. In model comparisons we tested for linear and non-linear birth order effects as well as for possible interactions of birth order and sibship size. Our estimated effect sizes are consistent with the emerging account of birth order as having relatively little impact on intelligence, Big Five, and risk aversion; and they exclude recent estimates from WEIRD populations based on large sample sizes. Considering educational attainment, we found a nonlinear pattern that was not robust to the imputation of missing data and in any case not aligned with trends in WEIRD countries. Overall, the small effects of birth order reported in other studies appear to be culturally specific. 
+Few studies have examined birth order effects on personality in countries that are not Western, educated, industrialized, rich, and democratic (WEIRD). However, theories have generally suggested interculturally universal family dynamics as the mechanism behind birth order effects, and prominent theories such as resource dilution would even predict stronger effects in poorer countries. Here, we investigate a subset of up to 11,188 participants of the Indonesian Family Life Survey to investigate whether later-borns differ from earlier-borns in intelligence, educational attainment, Big Five, and risk aversion. Analyses were performed using within-family designs in mixed-effects models. In model comparisons we tested for linear and non-linear birth order effects as well as for possible interactions of birth order and sibship size. Our estimated effect sizes are consistent with the emerging account of birth order as having relatively little impact on intelligence, Big Five, and risk aversion; and they exclude recent estimates from WEIRD populations based on large sample sizes. Considering educational attainment, we found a nonlinear pattern that was not robust to the imputation of missing data and in any case not aligned with trends in WEIRD countries. Overall, the small effects of birth order reported in other studies appear to be culturally specific. 
 
 
 ### References
