--- a/3_imputation.Rmd
+++ b/3_imputation.Rmd
@@ -13,8 +13,9 @@ editor_options:
 
 ## Helper
 ```{r helper}
-knitr::opts_chunk$set(eval = FALSE)
+knitr::opts_chunk$set(eval = T)
 source("0_helpers.R")
+library(tidylog)
 ```
 
 
@@ -30,7 +31,7 @@ alldata_birthorder = alldata_birthorder %>%
   select(-lifebirths) %>% 
   filter(!is.na(mother_pidlink)) %>% 
   select(-father_pidlink) %>% 
-  filter(is.na(any_multiple_birth) | any_multiple_birth != 1) %>% # remove 7 and 2 individuals who are known as stillbirth or miscarriage but still have PID
+  filter(is.na(any_multiple_birth) | any_multiple_birth != 1) %>% # remove 7 and 2 individuals who are known as stillbirth or miscarriage but still have PID %>% 
   select(-starts_with("age_"), -wave, -any_multiple_birth, -multiple_birth,
          -starts_with("g_factor")) %>% 
   mutate(money_spent_smoking_log = if_else(is.na(money_spent_smoking_log) & ever_smoked == 0, 0, money_spent_smoking_log),
@@ -148,23 +149,51 @@ str(alldata_birthorder)
 alldata_birthorder %>% select_if(function(.)!is.numeric(.)) %>% names()
 
 correlations = corr_pipe(alldata_birthorder %>% select_if(is.numeric))
+```
 
-alldata_birthorder <-  alldata_birthorder %>% select(`mother_pidlink`,  `age`, `male`, `birthorder_naive`, `sibling_count_naive`, count_birthorder_naive, `birthorder_genes`, `sibling_count_genes`,  count_birthorder_genes,
+## Defining the sample for imputation
+```{r}
+alldata_birthorder$main_outcomes <- alldata_birthorder %>% select(`raven_2015_young`, `raven_2015_old`, `words_delayed`, `raven_2007_old`, `raven_2007_young`, `big5_ext`, `riskA`, `years_of_education`) %>% mutate_all(~ !is.na(.)) %>% rowSums()
+xtabs(~ main_outcomes + age, alldata_birthorder)
+# xtabs(~ is.na(raven_2015_young) + age, alldata_birthorder)
+alldata_birthorder <-  alldata_birthorder %>% 
+  # filter(!is.na(birthorder_genes)) %>% 
+  group_by(mother_pidlink) %>% 
+  mutate(var_scg = var(sibling_count_genes, na.rm = T)) %>% 
+  filter(is.na(var_scg) | var_scg == 0) %>% 
+  ungroup() %>% 
+  filter(coalesce(sibling_count_genes, sibling_count_naive) > 1) %>% 
+  filter(!is.na(birthorder_genes) | ( !is.na(birthorder_naive) & main_outcomes > 1)) %>% 
+  filter(age > 14 | (age > 13) & (!is.na(raven_2015_old) | !is.na(years_of_education) | !is.na(big5_ext) | !is.na(riskA))) %>% 
+  select(`mother_pidlink`,  `age`, `male`, 
+         `birthorder_naive`, `sibling_count_naive`,  count_birthorder_naive,
+         `birthorder_genes`, `sibling_count_genes`,  count_birthorder_genes,
 `raven_2015_young`, `math_2015_young`, `raven_2015_old`, `math_2015_old`, `words_delayed`, `adaptive_numbering`, `raven_2007_old`, `raven_2007_young`, `math_2007_young`, `math_2007_old`, `count_backwards`, 
 
 `big5_ext`, `big5_con`, `big5_open`, `big5_neu`, `big5_agree`, `riskA`, `riskB`,
 
-`Elementary_missed`, `Elementary_worked`, `attended_school`,
-
-`years_of_education`, `Self_employed`, `ever_smoked`, `still_smoking`, `wage_last_month_log`, `wage_last_year_log`)
+`years_of_education`)
+  
+alldata_birthorder <-  alldata_birthorder %>% 
+  group_by(mother_pidlink) %>% 
+  mutate(sibling_count_genes = if_else(all(is.na(sibling_count_genes)), NA_integer_, as.integer(mean(sibling_count_genes, na.rm = T)))) %>% 
+  ungroup()
 
 alldata_birthorder <-  alldata_birthorder %>% 
   rename_all(funs(str_replace_all(., "\\s", "_"))) %>% 
   rename_all(funs(str_replace_all(., ",", "_")))
 
-alldata_birthorder <- alldata_birthorder %>% 
-  mutate(age2 = I((age - mean(age, na.rm = T)) ^ 2),
-         age3 = I((age - mean(age, na.rm = T)) ^ 3))
+age_poly <- poly(scale(alldata_birthorder$age)[,1], degree = 3, raw = T)
+qplot(age_poly[,1], alldata_birthorder$age)
+
+age_groups <- Hmisc::cut2(alldata_birthorder$age, cuts = c(14, 18, 25, 30, 40, 53))
+table(as.character(age_groups), exclude = NULL)
+# alldata_birthorder$age <- age_groups
+alldata_birthorder <- alldata_birthorder %>%
+  mutate(
+    age = age_poly[,1],
+    age2 = age_poly[,2],
+    age3 = age_poly[,3])
 
 saveRDS(alldata_birthorder, "data/alldata_birthorder_missing.rds")
 ```
@@ -172,28 +201,11 @@ saveRDS(alldata_birthorder, "data/alldata_birthorder_missing.rds")
 ## Functions
 
 ```{r}
-n_imputations.mitml = function(imps) {
-  imps$iter$m
-}
-n_imputations.mids = function(imps) {
-  imps$m
-}
-n_imputations.amelia = function(imps) {
-  length(imps$imputations)
-}
-n_imputations = function(imps) { UseMethod("n_imputations") }
-
-complete.mitml = mitml::mitmlComplete
-complete.mids = mice::complete
-complete = function(...) { UseMethod("complete") }
-
 library(mice)
 library(miceadds)
 library(mitml)
 library(lattice)
 library(pan)
-
-sort(round(miss_frac(alldata_birthorder),2))
 # skimr::skim(alldata_birthorder)
 ```
 
@@ -209,53 +221,9 @@ dim(alldata_birthorder)
 nrow(alldata_birthorder)
 ncol(alldata_birthorder)
 summary(alldata_birthorder)
+skimr::skim(alldata_birthorder)
 ```
 
-## Trial
-```{r}
-dta <- tibble(
-  linear = rnorm(100),
-  linear_b = linear + 0.2 * rnorm(100),
-  dichot = factor(case_when(
-    linear < -1 ~ "-1",
-    linear < 1 ~ "-1 to 1",
-    TRUE ~ "+1"
-  )),
-  dichot_b = factor(case_when(
-    linear_b < -1 ~ "-1",
-    linear_b < 1 ~ "-1 to 1",
-    TRUE ~ "+1"
-  )),
-  trait = -0.5 * linear + 0.1 * linear^3 + 1 * (linear ^ 2) + rnorm(100)
-)
-cor(dta$linear, dta$linear_b)
-miss <- dta
-miss[1:20, c("linear", "dichot")] <- NA
-miss[10:30, c("trait")] <- NA
-
-str(miss$dichot_b)
-
-imp0 <- mice(miss, maxit=0)
-
-pred1 <- imp0$predictorMatrix
-pred1
-pred1 = quickpred(miss, mincor = 0.1) #all variables that correlate > .1
-pred1[, "trait"] <- 0
-pred1["dichot", "trait"] <- 1
-pred1[, "linear"] <- 0
-pred1["linear_b", "linear"] <- 1
-pred1[, "dichot"] <- 0
-pred1["dichot_b", "dichot"] <- 1
-pred1[, "linear_b"] <- 0
-pred1[, "dichot_b"] <- 0
-meth1 <- imp0$method
-
-imp <- mice(miss, m = 20, predictorMatrix = pred1, maxit = 30)
-
-plot(imp)
-
-# cbind(mice::complete(imp, 1) %>% select(linear, dichot, trait), dta %>% select(linear, dichot, trait)) %>% View
-```
 
 ### Missingness pattern
 
@@ -265,17 +233,17 @@ We can see that
 2. there are many for whom we have outcome info, but only the "naive" birth order, not based
 on pregnancy data
 
-#### Reduced set of variables
+#### Reduced set of variables to highlight patterns
 
 ```{r}
-miss_frac(alldata_birthorder)
+sort(round(miss_frac(alldata_birthorder),2))
 missingness_pattern = md.pattern(alldata_birthorder %>% 
-                                   select(birthorder_naive, birthorder_genes,
+                                   select(birthorder_genes,
                                           math_2015_young,
                                           math_2015_old, words_delayed,
                                           raven_2007_young, raven_2007_old, big5_ext))
 DT::datatable(md_pattern(alldata_birthorder %>% 
-                                   select(birthorder_naive, birthorder_genes,
+                                   select(birthorder_genes,
                                           math_2015_young,
                                           math_2015_old, words_delayed,
                                           raven_2007_young, raven_2007_old, big5_ext), min_freq = 0.005))
@@ -288,17 +256,17 @@ missingness_pattern = md.pattern(alldata_birthorder)
 DT::datatable(md_pattern(alldata_birthorder, min_freq = 0.005))
 ```
 
-```{r}
+### prepare Imputation
+```{r prepimp}
 alldata_birthorder$mother_pidlink = as.integer(alldata_birthorder$mother_pidlink)
-skimr::skim(alldata_birthorder)
 
 imp0 <- mice(alldata_birthorder, maxit=0)
 
 pred1 <- imp0$predictorMatrix
 pred1
-pred1 = quickpred(alldata_birthorder, mincor = 0.1) #all variables that correlate > .1
+pred1 = quickpred(alldata_birthorder, mincor = 0.05) #all variables that correlate > .05
 pred1
-pred1[, 1:27] <- 1 # let focal variables predict each other in any case
+# pred1[, 1:27] <- 1 # let focal variables predict each other in any case
 
 # naive BO/SC never imputed (almost never missing, only used to impute BO genes)
 pred1[, c("birthorder_naive", "sibling_count_naive", "count_birthorder_naive")] <- 0
@@ -313,6 +281,11 @@ pred1[, c("birthorder_genes", "sibling_count_genes", "count_birthorder_genes")] 
 pred1["birthorder_naive", c("birthorder_genes")] <- 1
 pred1["sibling_count_naive", c("sibling_count_genes")] <- 1
 pred1["count_birthorder_naive", c("count_birthorder_genes")] <- 1
+pred1["count_birthorder_genes", c("raven_2015_young", "math_2015_young", 
+"raven_2015_old", "math_2015_old", "words_delayed", "adaptive_numbering", 
+"raven_2007_old", "raven_2007_young", "math_2007_young", "math_2007_old", 
+"count_backwards", "big5_ext", "big5_con", "big5_open", "big5_neu", 
+"big5_agree", "riskA", "riskB", "years_of_education")] <- 1
 
 meth1 <- imp0$method
 
@@ -322,29 +295,129 @@ meth1 <- imp0$method
 pred1[, "mother_pidlink"] = -2
 # set imputation procedures
 meth1[-1] <- "2l.pan"
+meth1[c("birthorder_naive")] <- ""
+meth1[c("sibling_count_naive")] <- ""
 meth1[c("count_birthorder_naive")] <- ""
+meth1[c("birthorder_genes")] <- "cart"
+meth1[c("sibling_count_genes")] <- "2lonly.norm"
 meth1[c("count_birthorder_genes")] <- "polyreg"
 pred1
+meth1
+```
 
-if (file.exists("data/birthorder_imps.rds")) {
-  all_imps <- readRDS("data/birthorder_imps.rds")
+
+### m=1
+```{r}
+# imp <- mice(alldata_birthorder, m = 1, maxit = 1, predictorMatrix = pred1, method = meth1)
+# mids2mitml.list(imp)[[1]]$sibling_count_genes %>% table(exclude = NULL)
+# mids2mitml.list(imp)[[1]] %>% group_by(mother_pidlink) %>% summarise(n_distinct(birthorder_genes),
+#                                                     n_distinct(sibling_count_genes),
+#                                                     n(), 
+#                                                     mean(sibling_count_genes, na.rm =T)) %>% 
+#   View()
+
+# imp$loggedEvents
+# densityplot(imp)
+```
+
+
+### Run more imputations on cluster
+```{r clusterimp}
+if (file.exists("data/birthorder_imps4.rds")) {
+  all_imps <- readRDS("data/birthorder_imps4.rds")
 } else {
   # imp1 <- mice(alldata_birthorder, maxit = 1, m=1, predictorMatrix = pred1, method = meth1)
   # imp2 <- mice(alldata_birthorder, maxit = 60, m=1, predictorMatrix = pred1, method = meth1)
   
   library(future)
-  login <- tweak(remote, workers = "arslan@arc-lin-cpt11.mpib-berlin.mpg.de") # Your username goes before the @
-  plan(list(login, tweak(multicore, workers = 10)))
+library(future.batchtools)
+
+#' # Send job to cluster {.tabset .tabset-sticky}
+#' This function is used to send jobs to a computing cluster.
+#' It accomplishes the following needs:
+#' - wait for errors during building the model
+#' - close the SSH connections to the cluster if building the model worked
+#'    - this is useful so I don't open hundreds of SSH tunnels to send over
+#'      models
+#' - if the model has been built already, check if LOO has been computed, if not, rerun
+#' - if we're not in an interactive session, load the model (this allows me to use
+#' the same code to retrieve the model that I use to send it off)
+#'
+send_job_to_cluster <- function(expr,
+                                job_name = 'boimp', queue = "default",
+                                walltime = "10:0:0", memory = 10, ncpus = 6,
+                                interactive_call = interactive(),
+                                wait_till_error = 3,
+                                template = 'torque-lido.tmpl') {
+  file <- paste0(job_name, ".rds")
+  file_there <- file.exists(file)
+  if (file_there) {
+    mod <- readRDS(file)
+    if (interactive_call) {
+      "done"
+    } else {
+      mod
+    }
+  } else {
+    if (file.exists(template)) { 
+      qsub <- tweak(batchtools_torque, template = template,
+                    # workers = "export LSF_ENVDIR=/opt/lsf/conf",
+                    resources = list(job.name = job_name,
+                                     queue = queue,
+                                     walltime = walltime,
+                                     memory = memory,
+                                     ncpus = ncpus))
+      plan(qsub)
+    }
+    expr <- substitute(expr)
+    job <- future(expr, substitute = FALSE,
+                  conditions = character(0),
+                  stdout = NA)
+    i <- 0
+    while (i < wait_till_error) {
+      if (resolved(job)) {
+        break
+      } else {
+        Sys.sleep(3)
+        i <- i + 3
+      }
+    }
+    if (resolved(job)) {
+      value(job)
+    } else {
+      "sent"
+    }
+  }
+}
+model_time <- function(model) {
+  rstan::get_elapsed_time(model$fit) %>% rowSums() %>% max() %>% {./60/60}
+}
+
+options(future.globals.maxSize = 2000*1024^2)
+# login just once, deliver multiple jobs
+login <- tweak(remote, workers = rep("arslan@tardis.mpib-berlin.mpg.de", 1),
+               persistent = FALSE)
+plan(login)
+
+  library(future)
+  m <- 50
   all_imps %<-% {
     imps <- listenv::listenv()
-    for (i in seq_along(1:10)) {
-      imps[[i]] %<-% mice(alldata_birthorder, m = 1, maxit = 40, predictorMatrix = pred1, method = meth1)
+    for (i in seq_along(1:m)) {
+      job_name <- paste0("bo_imp/i6", i)
+      imps[[i]] <- send_job_to_cluster({
+        saveRDS(1, file = paste0(job_name, ".rds"))
+        imp <- mice(alldata_birthorder, m = 1, maxit = 30, predictorMatrix = pred1, method = meth1)
+        saveRDS(imp, file = paste0(job_name, ".rds"))
+        imp
+      }, job_name = job_name, queue = "default", ncpus = 1, walltime = "5:0:0",
+memory = 2)
     }
     all_imps <- as.list(imps)
-    saveRDS(all_imps, "birthorder_imps.rds")
+    # saveRDS(all_imps, "birthorder_imps4.rds")
     all_imps
   }
-  saveRDS(all_imps, "data/birthorder_imps.rds")
+  saveRDS(all_imps, "data/birthorder_imps4.rds")
 }
 
 alldata_birthorder_i = all_imps[[1]]
@@ -356,7 +429,7 @@ for (i in 2:length(all_imps)) {
 
 
 ```{r}
-saveRDS(alldata_birthorder_i, file = "data/alldata_birthorder_i_ml.rds")
+saveRDS(alldata_birthorder_i, file = "data/alldata_birthorder_i_ml5.rds")
 ```
  
 
